# Atlas

./: .clang-format  .gitignore  .gitmodules  0-games_8cpp.html  0-games_8cpp.js  1-versions_8cpp.html  1-versions_8cpp.js  10-tag__mapings_8cpp.html  10-tag__mapings_8cpp.js  11-atlas__tags_8cpp.html  11-atlas__tags_8cpp.js  12-f95__zone__tags_8cpp.html  12-f95__zone__tags_8cpp.js  13-previews_8cpp.html  13-previews_8cpp.js  14-banners_8cpp.html  14-banners_8cpp.js  15-data__change_8cpp.html  15-data__change_8cpp.js  16-f95__zone__mapping_8cpp.html  16-f95__zone__mapping_8cpp.js  17-blurhash_8cpp.html  17-blurhash_8cpp.js  2-import__times_8cpp.html  2-import__times_8cpp.js  3-atlas__data_8cpp.html  3-atlas__data_8cpp.js  4-atlas__previews_8cpp.html  4-atlas__previews_8cpp.js  5-atlas__mappings_8cpp.html  5-atlas__mappings_8cpp.js  6-f95__zone__data_8cpp.html  6-f95__zone__data_8cpp.js  7-f95__zone__screens_8cpp.html  7-f95__zone__screens_8cpp.js  8-updates_8cpp.html  8-updates_8cpp.js  9-tags_8cpp.html  9-tags_8cpp.js  AboutAtlas_8cpp.html  (+2200 more)
atlas/: CMakeLists.txt  debug_console.py  main.cpp  main.py  rc_resources.py  resources.qrc  resources_rc.py
atlas-updater/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp
atlas/assets/icons/: svg2ico.bat
atlas/assets/themes/: dark.qss
atlas/core/: CMakeLists.txt  ConfigNotification.cpp  Types.hpp  config.hpp  exceptions.hpp  foldersize.cpp  foldersize.hpp  imageManager.cpp  imageManager.hpp  logger.py  logging.cpp  logging.hpp  notifications.cpp  notifications.hpp  pools.cpp  pools.hpp  settings.py  system.hpp  version.hpp
atlas/core/config/: ConfigNotification.cpp  ConfigNotification.hpp  config.cpp  config.hpp
atlas/core/database/: Binder.cpp  Binder.hpp  Column.hpp  Database.cpp  Database.hpp  FlyWeight.hpp  FunctionDecomp.hpp  GameMetadata.cpp  GameMetadata.hpp  RapidTransaction.cpp  RapidTransaction.hpp  Record.cpp  Record.hpp  RecordData.cpp  RecordData.hpp  Search.cpp  Search.hpp  Transaction.cpp  Transaction.hpp  Version.hpp  banners.hpp  binders.hpp  database.py  extractors.hpp  helpers.hpp
atlas/core/fgl/: string_literal.hpp
atlas/core/gamelist/: parser.cpp  utils.hpp
atlas/core/images/: ImageLoader.cpp  ImageLoader.hpp  blurhash.cpp  blurhash.hpp  images.cpp  images.hpp  import.cpp  import.hpp  loader.cpp  loader.hpp  thumbnails.cpp  thumbnails.hpp
atlas/core/import/: GameImportData.hpp  GameScanner.cpp  GameScanner.hpp  ImportNotifier.cpp  ImportNotifier.hpp  Importer.cpp  Importer.hpp  game_scanner.py
atlas/core/logging/: dev.hpp  formatters.cpp  formatters.hpp  logging.cpp  logging.hpp  serializers.cpp  spdlogHelpers.cpp
atlas/core/network/: NetworkManager.cpp  NetworkManager.hpp
atlas/core/notifications/: notifications.cpp  notifications.hpp
atlas/core/remote/: AtlasRemote.cpp  AtlasRemote.hpp  RemoteDownloader.cpp  RemoteDownloader.hpp  concept.hpp  extract.cpp  extract.hpp
atlas/core/scanner/: game_scanner.py
atlas/core/search/: QueryBuilder.cpp  QueryBuilder.hpp
atlas/core/string/: wstring.cpp  wstring.hpp
atlas/core/tasks/: TaskBase.hpp  TaskManager.cpp  TaskManager.hpp
atlas/core/threading/: ImportPreProcessor.cpp  ImportPreProcessor.hpp  ImportProcessor.cpp  ImportProcessor.hpp
atlas/core/updater/: AtlasUpdater.cpp  AtlasUpdater.hpp
atlas/core/utilities/: game_detals.py  threading.py
atlas/core/utils/: FileScanner.cpp  FileScanner.hpp  QImageBlur.cpp  QImageBlur.hpp  crypto.cpp  crypto.hpp  fileDownloader.cpp  fileDownloader.hpp  foldersize.cpp  foldersize.hpp  operators.hpp  updater.cpp  updater.hpp
atlas/designer/: AtlasSettingsInterface.hpp  CMakeLists.txt  InterfaceCollection.cpp  InterfaceCollection.hpp  OverlaySettingWidget.cpp  OverlaySettingWidget.hpp  OverlaySettingWidget.ui  OverlaySettingsWidget.cpp  OverlaySettingsWidget.hpp  OverlaySettingsWidget.ui  OverlaySettingsWidgetInterface.cpp  OverlaySettingsWidgetInterface.hpp  defines.hpp
atlas/designer/primitives/: SettingsToggle.cpp  SettingsToggle.hpp  SettingsValue.cpp  SettingsValue.hpp
atlas/ui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.py  mainwindow.ui  ui_mainwindow.py
atlas/ui/delegates/: BatchImportDelegate.cpp  ImageDelegate.cpp  ImageDelegate.hpp  RecordBannerDelegate.cpp  RecordBannerDelegate.hpp  record_banner_delegate.py
atlas/ui/dialog/: AboutAtlas.cpp  AboutAtlas.hpp  AboutAtlas.py  AboutAtlas.ui  AddGameDialog.cpp  AddGameDialog.hpp  BatchImportDialog.cpp  BatchImportDialog.hpp  Console.cpp  Console.h  Console.ui  ProgressBarDialog.cpp  ProgressBarDialog.hpp  ProgressBarDialog.ui  RecordEditor.cpp  RecordEditor.hpp  RecordEditor.ui  SettingsDialog.cpp  SettingsDialog.hpp  SettingsDialog.ui  StatsDialog.cpp  StatsDialog.hpp  UpdateDialog.cpp  UpdateDialog.h  UpdateDialog.ui  aboutqtdialog.cpp  aboutqtdialog.h  aboutqtdialog.ui  ui_AboutAtlas.py  ui_AddGameDialog.py  ui_RecordEditor.py  ui_StatsDialog.py  ui_UpdateDialog.py
atlas/ui/importer/: BatchImportDialog.ui  BatchImportDialog_ui.py  BatchImporter.py  SIModel.cpp  SIModel.hpp  SimpleImporter.cpp  SimpleImporter.hpp  SimpleImporter.ui  ui_BatchImportDialog.py
atlas/ui/models/: BatchImportModel.cpp  BatchImportModel.hpp  FilepathModel.cpp  FilepathModel.hpp  RecordListModel.cpp  RecordListModel.hpp  record_list_model.py
atlas/ui/notifications/: DevNotification.cpp  DevNotification.hpp  DevNotification.ui  FutureNotification.cpp  FutureNotification.hpp  FutureNotification.ui  GroupedProgressNotification.cpp  GroupedProgressNotification.hpp  GroupedProgressNotification.ui  MessageNotification.cpp  MessageNotification.hpp  (+19 more)
tests/: CMakeLists.txt  DatabaseTests.cpp  GTestBox.hpp  GameScannerTest.cpp  ImageManagerTests.cpp  MainWindowTest.cpp  TestBannerView.cpp  TestCouroutine.cpp  TestDatabase.cpp  TestGameMetadata.cpp  TestGameTab.cpp  TestGameView.cpp  TestImageManager.cpp  TestKeyReplacer.cpp  TestMassRecords.cpp  TestRecord.cpp  TestRegex.cpp  TestSearchWidget.cpp  TestTokenizer.cpp  badge_test.md  imageManagerTests.cpp  main.cpp
tests/database/: constexprTests.cpp
tests/unit_tests/: CMakeLists.txt
(+752 files in other folders)
